--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["tzewei <ctwei0206@1utar.my>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.12.0"
-
+google-generativeai = "0.1.0"
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
 useLibraryCodeForTypes = true
