--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["tzewei <ctwei0206@1utar.my>"]
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.12.0"
 google-generativeai = "0.1.0"
+openai = "1.51.2" 
+
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
 useLibraryCodeForTypes = true
